# Lead_AI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  README.md
app/: __init__.py  main.py
app/api/v1/: __init__.py  health.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logger.py  logging.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  base.py  business.py
app/repositories/: __init__.py
app/tasks/: celery_app.py
tests/: conftest.py  test_health.py
